added junk folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-2021-03-31-223726.jpg
+junk
 .vscode
-package.json
-haarcascade_frontalcatface.xml
-laura
-leyona
-faltu
-laya
-datasets
-leyona_coordninates
-laura_coordinates
-leo_coordinates
-laya_coordinates
-leyona_coordinates
+
